# AVT-GT2000-Driver

./: .gitignore  README.md
DriverOpenCV/: CMakeLists.txt
DriverOpenCV/src/: ApiController.cpp  ApiController.h  FrameObserver.cpp  TransformImage.h  program.cpp
OfficialVimba2.0/Documentation/: ReleaseNotes.txt
OfficialVimba2.0/VimbaGigETL/CTI/x86_32bit/: VimbaGigETL.cti
OfficialVimba2.0/VimbaGigETL/CTI/x86_64bit/: VimbaGigETL.cti
OfficialVimba2.0/VimbaGigETL/Documentation/: ReleaseNotes.txt
OfficialVimba2.0/VimbaImageTransform/Include/: VmbTransformTypes.h
OfficialVimba2.0/VimbaUSBTL/: Install.sh  Uninstall.sh
OfficialVimba2.0/VimbaUSBTL/Documentation/: ReleaseNotes.txt
